--- a/pt-manager-v2/package.json
+++ b/pt-manager-v2/package.json
@@ -1,9 +1,12 @@
 {
   "name": "pt-manager-v2",
   "private": true,
+  "homepage": "https://Girbanx.github.io/pt-manager-v2",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -15,13 +18,14 @@
     "firebase": "^10.9.0",
     "framer-motion": "^11.0.24",
     "react": "^18.2.0",
+    "react-calendar": "^6.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.63.0",
+    "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "tailwind-merge": "^2.2.2",
-    "uuid": "^13.0.0"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -32,6 +36,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.1",
     "vite": "^5.2.0"
